# AMR_crack-detection

./: README.md
clean_robot/config/: cleaning_costmap_params.yaml
clean_robot/launch/: amcl.launch  move_base.launch  navigation.launch  test.launch
clean_robot/maps/: test.pgm  test.yaml  test2.pgm
clean_robot/param/: dwa_local_planner_params.yaml
detect/: CMakeLists.txt  package.xml
detect/src/: Yolo.py
mark_gazebo/: CMakeLists.txt  package.xml
mark_gazebo/config/: mark.rviz
mark_gazebo/launch/: gmapping.launch  mark_gazebo.launch  mark_map.launch  mark_rviz.launch  move_base.launch
mark_gazebo/map/: mark_map.pgm  mark_map.yaml
mark_gazebo/param/: base_local_planner_params.yaml  control.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
mark_gazebo/urdf/: mark.xacro  mark_base.xacro  mark_camera.xacro  mark_laser.xacro
nav_demo/: package.xml
nav_demo/config/: nav.rviz  nav_test.rviz
nav_demo/launch/: nav01_slam.launch  nav02_map_save.launch  nav03_map_server.launch  nav04_amcl.launch  nav05_path.launch  nav06_test.launch  nav07_slam_auto.launch  navgation.launch  test_amcl.launch
nav_demo/map/: nav.pgm  nav.yaml
robot_navigation/: package.xml
robot_navigation/config/: costmap_common_params.yaml
urdf01_rviz/: package.xml
urdf02_gazebo/: package.xml
xpkg_comm/: CMakeLists.txt
xpkg_vehicle/: CMakeLists.txt
xpkg_vehicle/include/: vehicle_data_convert.h
xpkg_vehicle/launch/: xnode_vehicle.launch
xpkg_vehicle/src/: vehicle_data_convert.cpp  xnode_vehicle.cpp
yolov5/: detect.py
(+48 files in other folders)
